--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Website Title</h1>
+            <h1>Free Course</h1>
         </header>
         <article>
-            <h2>Article 001</h2>
-            <p>Article Text 001</p>
+            <h2>HTML5 and CSS3 Course</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque molestias illo sed perspiciatis beatae eos quod ipsam rem sit possimus adipisci placeat voluptas alias, tempore praesentium quibusdam nobis voluptatibus modi!</p>
         </article>
         <article>
-            <h2>Article 002</h2>
-            <p>Article text 002</p>
+            <h2>JavaScript Course</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, rerum. Sunt, ipsam cum modi sit asperiores eius, velit amet tenetur, eligendi facilis perspiciatis illum corporis voluptatem cumque in unde quisquam?</p>
         </article>
     </main>
 </body>
