--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Free Course</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Course and Video">
         </header>
         <article>
             <h2>HTML5 and CSS3 Course</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="HTML Course">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque molestias illo sed perspiciatis beatae eos quod ipsam rem sit possimus adipisci placeat voluptas alias, tempore praesentium quibusdam nobis voluptatibus modi!</p>
+            <p><a href="curso-html.html">Access HTML5 Course</a></p>
         </article>
         <article>
             <h2>JavaScript Course</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="JavaScript Course">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, rerum. Sunt, ipsam cum modi sit asperiores eius, velit amet tenetur, eligendi facilis perspiciatis illum corporis voluptatem cumque in unde quisquam?</p>
+            <p><a href="curso-js.html">Access JavaScript Course</a></p>
         </article>
     </main>
 </body>
